# jetduinoBot

./: README.md
jetduinobot_description/: CMakeLists.txt  package.xml
jetduinobot_description/launch/: minimal_sim.launch  test.launch
jetduinobot_description/meshes/: chasis1.dae  chassis.blend  chassis.dae  chassis.skb  chassis.skp  hubcap.blend  hubcap_after_extrude.blend  jetson_tk1.dae  test_ball.dae  test_block.dae  top_plate.dae  top_plate.skp  wheel.blend  wheel.dae  wheel_tread.blend  wheel_tread.dae  wheel_tread_1.blend  wheel_tread_1.blend1  wheel_tread_1.dae  wheel_tread_2.blend  wheel_tread_2.blend1
jetduinobot_description/meshes/arduino_mega/: arduino_mega.dae  arduino_mega.skp
jetduinobot_description/meshes/battery_large/: battery_large.blend  battery_large.dae
jetduinobot_description/meshes/battery_small/: battery_small.blend  battery_small.dae
jetduinobot_description/meshes/brackets/: c_bracket.dae  c_bracket.skp  c_bracket_with_spacer.skp  mutli_purpose_bracket.dae  mutli_purpose_bracket.skb  mutli_purpose_bracket.skp
jetduinobot_description/meshes/dc_converter/: dc_converter.blend  dc_converter.dae
jetduinobot_description/meshes/grove_motor/: grove_motor.blend  grove_motor.blend1  grove_motor.dae
jetduinobot_description/meshes/jetduino/: jetduino.blend  jetduino.dae
jetduinobot_description/meshes/servos/: HS-422.skp
jetduinobot_description/urdf/: common_properties.urdf.xacro  dfrobot_4wd.urdf.xacro  jetduino.urdf.xacro  jetduinobot.urdf  jetduinobot.urdf.xacro  jetduinobot_properties.urdf.xacro  jetduinobot_test.urdf  masses.txt
(+33 files in other folders)
