<?xml version="1.0"?>
<package>
  <name>jetduinobot_description</name>
  <version>1.0.0</version>
  <description>jetduinobot_description provides a complete 3D model of the JetduinoBot for simulation and visualization. 
  The files in this package are parsed and used by a variety of other components. Most users will not interact directly with this package.
  </description>
  <author>David Cofer</author>
  <author email="dcofer@NeuroRoboticTech.com">Daniel Stonier</author>
  <maintainer email="dcofer@NeuroRoboticTech.com">Daniel Stonier</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/jetduinobot_description</url>
  <url type="repository">https://github.com/NeuroRoboticTech/jetduinoBot</url>
  <url type="bugtracker">https://github.com/NeuroRoboticTech/jetduinoBot/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>kobuki_description</run_depend>
  <run_depend>create_description</run_depend>
</package>
